feat: update the vp tree data and transaction vector process to handle fraud data correct